--- a/index.html
+++ b/index.html
@@ -494,7 +494,25 @@
             </li>
           </ul>
         </div>
+        <div class="form-footer">
+        <p class="form-footer-text">Subscribe</p>
+          <form action="" class="form-footer">
+            <label for="email" class="form-footer-label">Email</label>
+            <input
+              name="email"
+              type="email"
+              class="form-footer-input"
+              placeholder="E-posta"
+            />
+            <button type="submit" class="form-footer-button">Subscribe
+              <svg class="ğipş" width="24" height="24">
+                <use href="./images/icons.svg#icon"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+    
   </body>
 </html>
