--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <div class="icon">
                 <svg width="64" height="64">
                   <use
-                    href="./images/icons.svg#icon-antenna-1"
+                    href="./images/icons.svg#icon-antenna"
                     width="64"
                     height="64"
                   ></use>
@@ -84,7 +84,7 @@
               <div class="icon">
                 <svg width="64" height="64">
                   <use
-                    href="./images/icons.svg#icon-clock-1"
+                    href="./images/icons.svg#icon-clock"
                     width="64"
                     height="64"
                   ></use>
@@ -101,7 +101,7 @@
               <div class="icon">
                 <svg width="64" height="64">
                   <use
-                    href="./images/icons.svg#icon-diagram-1"
+                    href="./images/icons.svg#icon-diagram"
                     width="64"
                     height="64"
                   ></use>
@@ -117,7 +117,7 @@
               <div class="icon">
                 <svg width="64" height="64">
                   <use
-                    href="./images/icons.svg#icon-astronaut-1"
+                    href="./images/icons.svg#icon-astronaut"
                     width="64"
                     height="64"
                   ></use>
@@ -151,28 +151,28 @@
                   <li class="sosyal-li">
                     <a class="sosyal-a" href="">
                       <svg class="icon-sosyal" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sosyal-li">
                     <a class="sosyal-a" href="">
                       <svg class="icon-sosyal" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sosyal-li">
                     <a class="sosyal-a" href="">
                       <svg class="icon-sosyal" width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sosyal-li">
                     <a class="sosyal-a" href="">
                       <svg class="icon-sosyal" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -194,7 +194,7 @@
                     <a class="sosyal-a" href="">
                       <svg class="icon-sosyal" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-instagram-2"
+                          xlink:href="./images/icons.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -203,7 +203,7 @@
                     <a class="sosyal-a" href="">
                       <svg class="icon-sosyal" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-facebook-1"
+                          xlink:href="./images/icons.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
@@ -212,7 +212,7 @@
                     <a class="sosyal-a" href="">
                       <svg class="icon-sosyal" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-linkedin-1"
+                          xlink:href="./images/icons.svg#icon-linkedin"
                         ></use>
                       </svg>
                     </a>
@@ -220,9 +220,7 @@
                   <li class="sosyal-li">
                     <a class="sosyal-a" href="">
                       <svg width="16" height="16">
-                        <use
-                          xlink:href="./images/icons.svg#icon-twitter-1"
-                        ></use>
+                        <use xlink:href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -244,7 +242,7 @@
                     <a class="sosyal-a" href="">
                       <svg class="icon-sosyal" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-instagram-2"
+                          xlink:href="./images/icons.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -253,7 +251,7 @@
                     <a class="sosyal-a" href="">
                       <svg class="icon-sosyal" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-facebook-1"
+                          xlink:href="./images/icons.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
@@ -262,7 +260,7 @@
                     <a class="sosyal-a" href="">
                       <svg class="icon-sosyal" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-linkedin-1"
+                          xlink:href="./images/icons.svg#icon-linkedin"
                         ></use>
                       </svg>
                     </a>
@@ -270,9 +268,7 @@
                   <li class="sosyal-li">
                     <a class="sosyal-a" href="">
                       <svg width="16" height="16">
-                        <use
-                          xlink:href="./images/icons.svg#icon-twitter-1"
-                        ></use>
+                        <use xlink:href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -294,7 +290,7 @@
                     <a class="sosyal-a" href="">
                       <svg class="icon-sosyal" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-instagram-2"
+                          xlink:href="./images/icons.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -303,7 +299,7 @@
                     <a class="sosyal-a" href="">
                       <svg class="icon-sosyal" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-facebook-1"
+                          xlink:href="./images/icons.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
@@ -312,7 +308,7 @@
                     <a class="sosyal-a" href="">
                       <svg class="icon-sosyal" width="16" height="16">
                         <use
-                          xlink:href="./images/icons.svg#icon-linkedin-1"
+                          xlink:href="./images/icons.svg#icon-linkedin"
                         ></use>
                       </svg>
                     </a>
@@ -320,9 +316,7 @@
                   <li class="sosyal-li">
                     <a class="sosyal-a" href="">
                       <svg width="16" height="16">
-                        <use
-                          xlink:href="./images/icons.svg#icon-twitter-1"
-                        ></use>
+                        <use xlink:href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -467,35 +461,35 @@
             <li class="footer-end">
               <a href="" class="footer-link">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-end">
               <a href="" class="footer-link">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-end">
               <a href="" class="footer-link">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-end">
               <a href="" class="footer-link">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
         <div class="form-footer">
-        <p class="form-footer-text">Subscribe</p>
+          <p class="form-footer-text">Subscribe</p>
           <form action="" class="form-footer">
             <label for="email" class="form-footer-label">Email</label>
             <input
@@ -504,15 +498,98 @@
               class="form-footer-input"
               placeholder="E-posta"
             />
-            <button type="submit" class="form-footer-button">Subscribe
-              <svg class="ğipş" width="24" height="24">
-                <use href="./images/icons.svg#icon"></use>
+            <button type="submit" class="form-footer-button">
+              Subscribe
+              <svg class="send-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
           </form>
         </div>
       </div>
     </footer>
-    
+    <div class="modal-window">
+      <div class="modal-container">
+        <button class="modal-button">
+          <svg class="modal-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form action="" class="modal-form">
+          <div class="modal-inputs">
+            <label for="user-name" class="modal-label">Name</label>
+             <div class="input-icon">
+               <input
+              type="text"
+              name="user-name"
+              id="user-name"
+              class="modal-input"
+              placeholder="Name"
+            />
+            <svg class="modal-svg" width="18" height="24">
+              <use href="./images/icons.svg#icon-person"></use>
+            </svg>
+          </div>
+          <div class="modal-inputs">
+            <label for="user-name" class="modal-label">Phone</label>
+             <div class="input-icon">
+               <input
+              type="text"
+              name="user-name"
+              id="user-name"
+              class="modal-input"
+              placeholder="Name"
+            />
+            <svg class="modal-svg" width="18" height="24">
+              <use href="./images/icons.svg#icon-phone"></use>
+            </svg>
+          </div>
+          <div class="modal-inputs">
+            <label for="user-name" class="modal-label">Email</label>
+             <div class="input-icon">
+               <input
+              type="text"
+              name="user-name"
+              id="user-name"
+              class="modal-input"
+              placeholder="Name"
+            />
+            <svg class="modal-svg" width="18" height="24">
+              <use href="./images/icons.svg#icon-email"></use>
+            </svg>
+          </div>
+           <div class="modal-inputs">
+            <label for="user-comment" class="modal-label">Comment</label>
+             <div class="input-icon-area">
+                <textarea
+                name="user-comment"
+                id="user-comment"
+                class="modal-textarea"
+                placeholder="Text input"
+              ></textarea>
+          </div>
+          <div class="modal-checkbox-div">
+            <input
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              class="modal-checkbox-input "
+              value="true"
+            />
+            <label for="user-privacy" class="modal-checkbox-label">
+              I accept the terms and conditions of the <a class="privacy-policy" href="">Privacy Policy</a>
+              <span class="check-box">
+                <svg class="check-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-box"></use>
+                </svg>
+              </span>
+            </label>
+          </div>
+          <button type="submit" class="modal-submit">Send</button>
+      </div>
+         
+      </div>
+    </div>
   </body>
 </html>
