--- a/index.html
+++ b/index.html
@@ -490,27 +490,28 @@
         </div>
         <div class="form-footer">
           <p class="form-footer-text">Subscribe</p>
-          <form action="" class="form-footer">
-            <label for="email" class="form-footer-label">Email</label>
+          <form action="" class="form-footers">
+            <label for="email" class="form-footer-label">
             <input
               name="email"
               type="email"
               class="form-footer-input"
               placeholder="E-posta"
             />
-            <button type="submit" class="form-footer-button">
-              Subscribe
+            </label>
+            <button type="submit" class="form-footer-button">Subscribe
               <svg class="send-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
           </form>
         </div>
+        </div>
       </div>
     </footer>
     <div class="modal-window">
       <div class="modal-container">
-        <button class="modal-button">
+        <button type="button" class="modal-button">
           <svg class="modal-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
@@ -527,9 +528,11 @@
               class="modal-input"
               placeholder="Name"
             />
+            
             <svg class="modal-svg" width="18" height="24">
               <use href="./images/icons.svg#icon-person"></use>
             </svg>
+             </div>
           </div>
           <div class="modal-inputs">
             <label for="user-name" class="modal-label">Phone</label>
@@ -589,7 +592,7 @@
           <button type="submit" class="modal-submit">Send</button>
       </div>
          
-      </div>
+     </div>
     </div>
   </body>
 </html>
