--- a/index.html
+++ b/index.html
@@ -560,19 +560,16 @@
             </svg>
             </div>
           </div>
-          
           <div class="modal-inputs">
             <label for="user-comment" class="modal-label">Comment</label>
-             <div class="input-icon-area">
-                <textarea
+              <textarea
                 name="user-comment"
                 id="user-comment"
                 class="modal-textarea"
-                placeholder="Text input"
-              ></textarea>
-             </div>
+                placeholder="Text input">
+              </textarea>
           </div>
-          <div class="modal-checkbox-div">
+          <div class="modal-checkbox-div visually-hidden">
             <input
               type="checkbox"
               name="user-privacy"
@@ -581,18 +578,21 @@
               value="true"
             />
             <label for="user-privacy" class="modal-checkbox-label">
-              I accept the terms and conditions of the <a class="privacy-policy" href="">Privacy Policy</a>
               <span class="check-box">
                 <svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-box"></use>
                 </svg>
               </span>
+              I accept the terms and conditions of the
+              <a href="#" class="privacy-policy">Privacy Policy</a>
             </label>
           </div>
           <button type="submit" class="modal-submit">Send</button>
+        </form>
       </div>
+    </div>
          
-     </div>
+  </div>
     </div>
   </body>
 </html>
