--- a/index.html
+++ b/index.html
@@ -569,12 +569,12 @@
                 placeholder="Text input">
               </textarea>
           </div>
-          <div class="modal-checkbox-div visually-hidden">
+          <div class="modal-checkbox-div">
             <input
               type="checkbox"
               name="user-privacy"
               id="user-privacy"
-              class="modal-checkbox-input "
+              class="modal-checkbox-input visually-hidden"
               value="true"
             />
             <label for="user-privacy" class="modal-checkbox-label">
@@ -590,9 +590,9 @@
           <button type="submit" class="modal-submit">Send</button>
         </form>
       </div>
-      </div>
-      </div>
     </div>
+  </div>
+</div>
     
-  </body>
+</body>
 </html>
