--- a/index.html
+++ b/index.html
@@ -495,6 +495,7 @@
             <input
               name="emailfooter"
               type="email"
+              id="email"
               class="form-footer-input"
               placeholder="E-posta"/>
             </label>
@@ -504,7 +505,6 @@
               </svg>
             </button>
           </form>
-        </div>
         </div>
       </div>
     </footer>
@@ -590,9 +590,6 @@
           <button type="submit" class="modal-submit">Send</button>
         </form>
       </div>
-    </div>
-  </div>
-</div>
-    
+    </div>   
 </body>
 </html>
