--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
               type="email"
               id="email"
               class="form-footer-input"
-              placeholder="E-posta"/>
+              placeholder="E-mail"/>
             </label>
             <button type="submit" class="form-footer-button">Subscribe
               <svg class="send-icon" width="24" height="24">
