--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
             </svg>
             </div>
           </div>
-          <div class="modal-inputs">
+          <div class="modal-inputs modal-inputs-text">
             <label for="user-comment" class="modal-label">Comment</label>
               <textarea
                 name="user-comment"
