--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
         </div>
         <div class="form-footer">
           <p class="form-footer-text">Subscribe</p>
-          <form action="" class="form-footers">
+          <form class="form-footers">
             <label for="email" class="form-footer-label">
             <input
               name="emailfooter"
@@ -516,7 +516,7 @@
           </svg>
         </button>
         <p class="modal-text">Leave your contacts and we will call you back</p>
-        <form action="" class="modal-form">
+        <form class="modal-form">
           <div class="modal-inputs">
             <label for="user-name" class="modal-label">Name</label>
              <div class="input-icon">
