--- a/index.html
+++ b/index.html
@@ -488,6 +488,7 @@
             </li>
           </ul>
         </div>
+        <!--footer form-->
         <div class="form-footer">
           <p class="form-footer-text">Subscribe</p>
           <form class="form-footers">
@@ -508,6 +509,7 @@
         </div>
       </div>
     </footer>
+    <!--modal window-->
     <div class="modal-window">
       <div class="modal-container">
         <button type="button" class="modal-button">
@@ -525,7 +527,6 @@
               name="user-name"
               id="user-name"
               class="modal-input"
-              placeholder="Name"
             />
             <svg class="modal-svg" width="18" height="24">
               <use href="./images/icons.svg#icon-person"></use>
