--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Web Studio</title>
   </head>
   <body>
-    <header class="header-part">
+    <header class="header-part" id="header">
       <div class="container header-container">
         <nav class="nav-bar">
           <a href="./index.html" class="logo-link"
