--- a/index.html
+++ b/index.html
@@ -50,6 +50,90 @@
           </ul>
         </address>
       </div>
+      <!-- hamburger menü -->
+      <button type="button" class="burger" id="burgerButton">
+        <svg class="mo" width="24" height="24">
+          <use href="./images/icons.svg#icon-Group"></use>
+        </svg>
+      </button>
+      <!-- mobile menü -->
+      <div class="mob-menu" id="mobileMenu">
+        <div class="mob-menu-upper">
+          <button type="button" class="mob-menu-button" id="closeMenuButton">
+            <svg class="mob-menu-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+          <!-- mobile menu nav -->
+          <nav class="mob-menu-nav">
+            <ul class="mob-navigation-list">
+              <li class="mob-navigation-list">
+                <a href="#" class="mob-navigation-list-item-active"
+                  >Studio</a
+                >
+              </li>
+              <li class="mob-navigation-list">
+                <a href="#" class="mob-navigation-list-item">Portfolio</a>
+              </li>
+              <li class="mob-navigation-list">
+                <a href="#" class="mob-navigation-list-item">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <!-- mobile menu address -->
+          <address>
+            <ul class="mob-address-list">
+              <li>
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="mob-address-list-item"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+110001111111" class="mob-address-list-item"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+          <!-- mobile menu social -->
+          <div class="mob-menu-media-icon-container">
+            <ul class="mob-menu-media-icon-list">
+              <li class="mob-menu-media-icon-list-item">
+                <a class="mob-menu-media-icon-link" href="">
+                  <svg class="mob-menu-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-menu-media-icon-list-item">
+                <a class="mob-menu-media-icon-link" href="">
+                  <svg class="mob-menu-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-menu-media-icon-list-item">
+                <a class="mob-menu-media-icon-link" href="">
+                  <svg class="mob-menu-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-menu-media-icon-list-item">
+                <a class="mob-menu-media-icon-link" href="">
+                  <svg class="mob-menu-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- mobile menu list lower-->
+        <div class="mob-menu-lower"></div>
+      </div>
     </header>
     <main>
       <!--birinci section -->
@@ -493,14 +577,16 @@
           <p class="form-footer-text">Subscribe</p>
           <form class="form-footers">
             <label for="email" class="form-footer-label">
-            <input
-              name="emailfooter"
-              type="email"
-              id="email"
-              class="form-footer-input"
-              placeholder="E-mail"/>
+              <input
+                name="emailfooter"
+                type="email"
+                id="email"
+                class="form-footer-input"
+                placeholder="E-mail"
+              />
             </label>
-            <button type="submit" class="form-footer-button">Subscribe
+            <button type="submit" class="form-footer-button">
+              Subscribe
               <svg class="send-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
@@ -521,54 +607,55 @@
         <form class="modal-form">
           <div class="modal-inputs">
             <label for="user-name" class="modal-label">Name</label>
-             <div class="input-icon">
-               <input
-              type="text"
-              name="user-name"
-              id="user-name"
-              class="modal-input"
-            />
-            <svg class="modal-svg" width="18" height="24">
-              <use href="./images/icons.svg#icon-person"></use>
-            </svg>
+            <div class="input-icon">
+              <input
+                type="text"
+                name="user-name"
+                id="user-name"
+                class="modal-input"
+              />
+              <svg class="modal-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
             </div>
           </div>
           <div class="modal-inputs">
             <label for="user-phone" class="modal-label">Phone</label>
-             <div class="input-icon">
-               <input
-              type="text"
-              name="user-phone"
-              id="user-phone"
-              class="modal-input"
+            <div class="input-icon">
+              <input
+                type="text"
+                name="user-phone"
+                id="user-phone"
+                class="modal-input"
               />
-            <svg class="modal-svg" width="18" height="24">
-              <use href="./images/icons.svg#icon-phone"></use>
-            </svg>
-             </div>
+              <svg class="modal-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
           </div>
           <div class="modal-inputs">
             <label for="user-mail" class="modal-label">Email</label>
-             <div class="input-icon">
-               <input
-              type="text"
-              name="user-mail"
-              id="user-mail"
-              class="modal-input"
-            />
-            <svg class="modal-svg" width="18" height="24">
-              <use href="./images/icons.svg#icon-email"></use>
-            </svg>
+            <div class="input-icon">
+              <input
+                type="text"
+                name="user-mail"
+                id="user-mail"
+                class="modal-input"
+              />
+              <svg class="modal-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
             </div>
           </div>
           <div class="modal-inputs modal-inputs-text">
             <label for="user-comment" class="modal-label">Comment</label>
-              <textarea
-                name="user-comment"
-                id="user-comment"
-                class="modal-textarea"
-                placeholder="Text input">
-              </textarea>
+            <textarea
+              name="user-comment"
+              id="user-comment"
+              class="modal-textarea"
+              placeholder="Text input"
+            >
+            </textarea>
           </div>
           <div class="modal-checkbox-div">
             <input
@@ -591,6 +678,7 @@
           <button type="submit" class="modal-submit">Send</button>
         </form>
       </div>
-    </div>   
-</body>
+    </div>
+    <script src="./js/main.js"></script>
+  </body>
 </html>
